css/main.css
body{
	font-family: 'Montserrat', sans-serif;
	margin-bottom:60px;
}
.instagram-icon:before{
	content: '\f215';
	font: normal 16px/1 'Genericons';
	display: inline-block;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothi	ng: grayscale;
}
#nav-logo{
	color:white;
}
.white-text{
	color:white;
}
html, body {
margin: 0;
width: 100%;
height: 100%;
}
div{
	padding:0;
}

.hero {
background-image:url('https://media.giphy.com/media/3oAt1OlUKM1flwPz1K/giphy.gif');
-webkit-background-size: cover;
-moz-background-size: cover;
-o-background-size: cover;
background-size: cover;
display: table;
width: 100%;
height:100vh;
}
.hero .container {
display: table-cell;
text-align: center;
vertical-align: middle;
height: 689px
}
#img-logo{

}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
	margin-bottom: 10px;
}
h1 {
	font-size: 72px;
	font-weight: 700;
	padding-top:10px;
}
h2 {
	font-size: 30px;
}
h3 {
	font-size: 26px;
}
h4 {
	font-size: 22px;
}
h5 {
	font-size: 18px;
}
p {
	font: 14px/1.5em;
	line-height: 2;
}
.navbar-nav > li > a {
	font-family: "Roboto", Helvetica, Arial, sans-serif;
	font-weight: 500;
}
.navbar-custom {
    background-color:#2980b9;
    color:#ffffff;
    border-radius:0;
}

.navbar-custom .navbar-nav > li > a {
    color:#fff;
}
.navbar-custom .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
    color: #ffffff;
    background-color:transparent;
}
.navbar-custom .navbar-brand {
    color:#eeeeee;
}
.btn {
	padding-top:10px;
	position: relative;
	letter-spacing: 1.5px;
	border: none;
}
.btn:active {
	top: 2px;
}

/* Button default */
.btn-default, .btn-default:focus, .btn-default.focus, .btn-default:active, .btn-default.active {
	-webkit-transition: all 0.6s ease-in-out;
	-moz-transition: all 0.6s ease-in-out;
	-o-transition: all 0.6s ease-in-out;
	-ms-transition: all 0.6s ease-in-out;
	transition: all 0.6s ease-in-out;
}

/* Button blank */
.btn-blank {
	border: 2px solid #fff;
	color: #fff;
	padding: 8px 12px;
	display: inline-block;
	vertical-align: middle;
	-webkit-transform: translateZ(0);
	transform: translateZ(0);
	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
	-moz-osx-font-smoothing: grayscale;
	position: relative;
	-webkit-transition-property: color;
	transition-property: color;
	-webkit-transition-duration: 0.3s;
	transition-duration: 0.3s;
}
.btn-blank:before {
	content: "";
	position: absolute;
	z-index: -1;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background: #fff;
	-webkit-transform: scaleY(0);
	transform: scaleY(0);
	-webkit-transform-origin: 50% 100%;
	transform-origin: 50% 100%;
	-webkit-transition-property: transform;
	transition-property: transform;
	-webkit-transition-duration: 0.3s;
	transition-duration: 0.3s;
	-webkit-transition-timing-function: ease-out;
	transition-timing-function: ease-out;
}
.btn-blank:hover, .btn-blank:focus, .btn-blank:active {
	color: #333;
}
.btn-blank:hover:before, .btn-blank:focus:before, .btn-blank:active:before {
	-webkit-transform: scaleY(1);
	transform: scaleY(1);
}

/* Button active */
.btn:active, .btn.active {
	-webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.16);
	box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.16);
}
.white-text{
	color:white;
}
.black-text{
	color:black;
}
.title{
	padding-top:20px;
	font-size:54px;
}
.light{
	font-weight: 300;
}
.belizeHole{
	background-color: #2980b9;
}
#apply{
	padding-bottom: 1em;
}
#hero-subtext{
	font-weight: 200;
}
#about-text{
	font-size:16px;
}
#footer{
	height:10vh;
	bottom: 0;
	background-color:#2980b9;
}
i{
	padding-top: 2.5vh;
  padding-bottom: 2.5vh;
	color:white;
	padding-right:5px;
}
#last-icon{
	padding-right: 0;
}
.card {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
		padding: 3px 16px;
}
hr{
	border-top: 3px double black;
	width:25%;
}
#sponsor{
	padding-bottom: 10px;
}
.icon-bar {
	background-color:white !important;
}
*,
:after,
:before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.scroll-down {
  opacity: 1;
  -webkit-transition: all .5s ease-in 3s;
  transition: all .5s ease-in 3s;
}

.scroll-down {
  position: absolute;
  bottom: 30px;
  left: 50%;
  margin-left: -16px;
  display: block;
  width: 32px;
  height: 32px;
  border: 2px solid #FFF;
  background-size: 14px auto;
  border-radius: 50%;
  z-index: 2;
  -webkit-animation: bounce 2s infinite 2s;
  animation: bounce 2s infinite 2s;
  -webkit-transition: all .2s ease-in;
  transition: all .2s ease-in;
}

.scroll-down:before {
    position: absolute;
    top: calc(50% - 8px);
    left: calc(50% - 6px);
    transform: rotate(-45deg);
    display: block;
    width: 12px;
    height: 12px;
    content: "";
    border: 2px solid white;
    border-width: 0px 0 2px 2px;
}

@keyframes bounce {
  0%,
  100%,
  20%,
  50%,
  80% {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -webkit-transform: translateY(-10px);
    -ms-transform: translateY(-10px);
    transform: translateY(-10px);
  }
  60% {
    -webkit-transform: translateY(-5px);
    -ms-transform: translateY(-5px);
    transform: translateY(-5px);
  }
}

